--- a/backend/fork_and_star_backend/requirements.txt
+++ b/backend/fork_and_star_backend/requirements.txt
@@ -123,7 +123,7 @@ sniffio==1.3.1
 soupsieve==2.7
 SQLAlchemy==2.0.41
 stack-data==0.6.3
-starlette==0.47.1
+starlette>=0.47.2
 terminado==0.18.1
 threadpoolctl==3.6.0
 tinycss2==1.4.0
